@startuml
hide circle
skinparam classAttributeIconSize 0

Class "EditCommand" as EditCommand
Class "EditPersonCommand" as EditPersonCommand
Class "EditPersonDescriptor" as EditPersonDescriptor

EditCommand <|-- EditPersonCommand
EditPersonCommand --> EditPersonDescriptor

abstract class EditCommand {
    # index : Index
    + execute(model: Model): CommandResult
    {abstract} # executeEditCommand(model: Model): CommandResult
}

class EditPersonCommand {
    - editPersonDescriptor: EditPersonDescriptor
    + executeEditCommand(model: Model): CommandResult
    - createEditedPerson(personToEdit: Person, editPersonDescriptor : EditPersonDescriptor) : Person
}

class EditPersonDescriptor {
    - role: Role
    - name: Name
    - phone: Phone
    - email: Email
    - address: Address
    - tags: Set<Tag>
    + isAnyFieldEdited(): boolean
    + setRole(role: Role)
    + setName(name: Name)
    + setPhone(phone: Phone)
    + setEmail(email: Email)
    + setAddress(address: Address)
    + getRole(): Optional<Role>
    + getName(): Optional<Name>
    + getPhone(): Optional<Phone>
    + getEmail(): Optional<Email>
    + getAddress(): Optional<Address>
}

@enduml